# ChangeLog for media-libs/skstream
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/skstream/ChangeLog,v 1.26 2009/06/05 09:26:31 tupone Exp $

  05 Jun 2009; Alfredo Tupone <tupone@gentoo.org>
  +files/skstream-0.3.6-glibc2101.patch, -skstream-0.3.3.ebuild,
  skstream-0.3.6.ebuild:
  Fix build with glibc-2.10.1. Should fix bug #272703 by Diego Petteno'
  Removing old version

  18 Feb 2009; Raúl Porcel <armin76@gentoo.org> skstream-0.3.6.ebuild:
  sparc stable wrt #254833

  23 Jan 2009; Markus Meier <maekke@gentoo.org> skstream-0.3.6.ebuild:
  amd64/x86 stable, bug #254833

  23 Jan 2009; Brent Baude <ranger@gentoo.org> ChangeLog:
  stable ppc, bug 254833

  23 Jan 2009; Alfredo Tupone <tupone@gentoo.org>
  files/skstream-0.3.6-gcc43.patch, +files/skstream-0.3.6-test.patch,
  skstream-0.3.6.ebuild:
  Fix build with test features reported in stabilization bug #254833

  13 Jan 2009; Brent Baude <ranger@gentoo.org> skstream-0.3.6.ebuild:
  stable ppc, bug 254833

  06 Nov 2008; Tupone Alfredo <tupone@gentoo.org>
  +files/skstream-0.3.6-gcc43.patch, skstream-0.3.3.ebuild,
  skstream-0.3.6.ebuild:
  Missing include. Bug #245724 by Sandro Bonazzola

  07 May 2007; Tupone Alfredo <tupone@gentoo.org> skstream-0.3.6.ebuild:
  Added ~amd64 keyword

*skstream-0.3.6 (31 Jan 2007)

  31 Jan 2007; <tupone@gentoo.org> metadata.xml, +skstream-0.3.6.ebuild:
  Version bump to 0.3.6

  06 Jan 2007; Danny van Dyk <kugelfang@gentoo.org> -skstream-0.2.4.ebuild,
  -skstream-0.2.5.ebuild:
  QA: Removed unused versions.

  07 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> +metadata.xml,
  skstream-0.2.4.ebuild, skstream-0.2.5.ebuild, skstream-0.3.3.ebuild:
  Drop virtual/libc dependency. Add maintainer-needed metadata.

  12 Sep 2005; Gustavo Zacarias <gustavoz@gentoo.org> skstream-0.3.3.ebuild:
  Stable on sparc

  04 Sep 2005; Daniel Black <dragonheart@gentoo.org> -skstream-0.2.2.ebuild,