@@ -1,7 +1,17 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX skstream-0.3.6-gcc43.patch 604 RMD160 988d6bfe0850576599be4633b46c19bfe36b722f SHA1 57c8fc0a0aefdceb20d383070faca2a45173a68a SHA256 ae86169d92b632481618e06a3573887c1ac3344b87e6e3a211a9cc4b39fbe61b
 AUX skstream-0.3.6-glibc2101.patch 248 RMD160 ffeb05c053d7cbd4dd42bf8cf8452437842f914b SHA1 fa44587bdc94ac75a92dfdf64c1208b7b4d87d4e SHA256 fd1e99a2367526a51bfb893281eb6392b6b8a5a99216c17b009b4b8adb26495a
 AUX skstream-0.3.6-test.patch 1502 RMD160 50cdbd1aa1fec7d5b72e777a6ad0ce7207fa374c SHA1 f2248b5a2aa6d542b498ca009ef381a5de1b00e9 SHA256 84468c31e09456e2e63d7ece4ad8dcfea485f3880ffceda272fc8f9c9923d0c0
 DIST skstream-0.3.6.tar.bz2 265649 RMD160 0f51171850ec82ccf8ca561fe5d1307be87ae74d SHA1 95e16285cb347d752e6993cf18aef991db4f2143 SHA256 e25344ef2fbe49befc9613dcdd9d6ce740cfe096aa4c2683e536c12858f52bfc
-EBUILD skstream-0.3.6.ebuild 776 RMD160 ca0cc51341d7b901d2d65d3106b83a0f26a41491 SHA1 1b13a4d60751e85f0c360ddb8599047351c58202 SHA256 f461cf4c96da1da3a834a276c3c324d5344d2ec0fd8a29fe590d012d74ccaf79
-MISC ChangeLog 3101 RMD160 a0c6cdefaa3ee186b8492525fb8c32642e8c8ac8 SHA1 9b7c7f2a1c4eb2cb53b28829f0102cfe88b66a39 SHA256 3c9a63101a52b82ac7676436a3a494e07dd42a92d11a2d36652faa3a10f63983
+EBUILD skstream-0.3.6.ebuild 833 RMD160 6fd20c06491d7eb3ac5248e31db6550b7eceb90e SHA1 6fbf35b291d0d3d2e5faea649138d0d5af4ce83a SHA256 532ed9bec9ec74d2c070a17f98f3a9732174c9e5323f7cd26ce68c047ec9479f
+MISC ChangeLog 3266 RMD160 94dee253dffbc138441fb0d66c66cff6f8c321c9 SHA1 e781f4e6d90343be80ac0923df3a66ea9fd32286 SHA256 7ea80c685bd7e226df3d3ad2f214912d966f5906a38a2a2e2ccc9182c0945f5f
 MISC metadata.xml 220 RMD160 b66ff5250d1a79955d88eb4b596e248847ef8ab4 SHA1 c983eb26de5f0ac51bff2fc4c806a690f59371ee SHA256 8c6e89cc419dae6d9683f05addcb3ae26d0c2986d43b33977341853e92aa15d0
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iEYEARECAAYFAku1C44ACgkQni8M22OVw8DLEACgk04P2pylpq4qExQzzSmC3pfC
+OesAni3nUj/rcaaBjYRTPTfITth9GPWP
+=Ta90
+-----END PGP SIGNATURE-----
