@@ -1,4 +1,4 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: /var/cvsroot/gentoo-x86/media-libs/skstream/skstream-0.3.6.ebuild,v 1.8 2009/06/05 09:26:31 tupone Exp $
 EAPI=2
@@ -12,7 +12,10 @@ HOMEPAGE="http://www.worldforge.org/"
 SLOT="0"
 LICENSE="GPL-2"
 KEYWORDS="amd64 ppc sparc x86"
-IUSE=""
+IUSE="test"
+
+DEPEND="test? ( dev-util/cppunit )"
+RDEPEND=
 
 src_prepare() {
 	edos2unix ping/ping.cpp
@@ -23,5 +26,5 @@ src_prepare() {
 
 src_install() {
 	make DESTDIR="${D}" install || die "make install died"
-	dodoc AUTHORS ChangeLog NEWS README README.FreeSockets TODO
+	dodoc AUTHORS ChangeLog NEWS README README.FreeSockets TODO || die
 }
