@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/skstream
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/media-libs/skstream/ChangeLog,v 1.26 2009/06/05 09:26:31 tupone Exp $
+
+  01 Apr 2010; Nathan Phillip Brink (ohnobinki)
+  <ohnobinki@ohnopublishing.net> skstream-0.3.6.ebuild:
+  DEPEND on dev-util/cppunit for FEATURES=test. bug 312705.
 
   05 Jun 2009; Alfredo Tupone <tupone@gentoo.org>
   +files/skstream-0.3.6-glibc2101.patch, -skstream-0.3.3.ebuild,
